--- a/src/Device.Net.LibUsb/Device.Net.LibUsb.csproj
+++ b/src/Device.Net.LibUsb/Device.Net.LibUsb.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+        <TargetFrameworks>net8.0</TargetFrameworks>
         <NoWarn>1701;1702;CA1063</NoWarn>
         <DocumentationFile>Device.Net.LibUsb.xml</DocumentationFile>    
         <DebugType>embedded</DebugType>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="LibUsbDotNet" Version="2.2.29" />
-        <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.1">
+        <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="8.0.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
