--- a/src/Device.Net/Device.Net.csproj
+++ b/src/Device.Net/Device.Net.csproj
@@ -1,20 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net45;</TargetFrameworks>
+        <TargetFrameworks>net8.0</TargetFrameworks>
         <NoWarn>NU5125</NoWarn>
         <DocumentationFile>Device.Net.xml</DocumentationFile>
         <DebugType>embedded</DebugType>
+
+		<PackageId>Jimifish.Device.Net</PackageId>
+		<Version>1.0.1</Version>
+		<Authors>Jimifish</Authors>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/fishjimi/Jimifish.Device.Net</RepositoryUrl>
     </PropertyGroup>
     <ItemGroup>
       <Compile Remove="DeviceDataStreamer.cs" />
     </ItemGroup>
     <ItemGroup>
         <None Include="..\..\README.md" Link="README.md" />
-        <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.1">
+        <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="8.0.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
@@ -22,7 +28,7 @@
     <ItemGroup Condition="'$(TargetFramework)' != 'net45'">
         <Compile Remove="Logging/*.*" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-            <Version>3.1.7</Version>
+            <Version>8.0.1</Version>
         </PackageReference>
     </ItemGroup>
 </Project>
